2009-07-09  Lin Ma  <Lin.Ma@Sun.COM>

	* capplet/nwam-manager-properties.ui:
	* capplet/nwam_wireless_dialog.c (nwam_wireless_dialog_class_init),
	(nwam_wireless_dialog_init), (nwam_wireless_dialog_set_property),
	(nwam_wireless_dialog_get_property),
	(nwam_wireless_dialog_set_wifi_net),
	(nwam_wireless_dialog_set_key_index),
	(nwam_wireless_dialog_get_key_index), (dialog_run),
	(nwam_wireless_dialog_finalize), (security_selection_cb):
	* capplet/nwam_wireless_dialog.h:
	* common/nwamui_wifi_net.h: Fixed doo#9802

2009-07-08  Lin Ma  <Lin.Ma@Sun.COM>

	* capplet/nwam-manager-properties.ui:
	* capplet/nwam_conn_conf_ip_panel.c (show_changed_cb): doo:9870

2009-07-08  Lin Ma  <Lin.Ma@Sun.COM>

	* common/nwamui_ncu.c (get_nwam_ncu_handle), (nwamui_ncu_clone):
	Fixed doo:9709
	* daemon/status_icon.c (daemon_info), (daemon_active_ncp_changed),
	(daemon_active_env_changed):
	Reset change notify.
	
2009-07-07  Darren Kenny  <darren.kenny@sun.com>

	* common/nwamui_wifi_net.c: 
	  Update to handle the wep key index/slot and pass when setting the
	  wep key.
	* daemon/status_icon.c: 
	  Fixed a stupid error where ncu could be NULL due to use of local
	  scope variable masking outer.
	* nwam_core/usr/include/libnwam.h:
	  Update to latest header to get API changes.

2009-07-06  Lin Ma  <Lin.Ma@Sun.COM>

	* capplet/capplet-utils.c (capplet_util_object_notify_cb):
	* capplet/capplet-utils.h: Update for tree store.
	* capplet/nwam_location_dialog.c
	(nwam_location_connection_enabled_toggled_cb), (on_button_clicked),
	(tree_model_foreach_find_enabled_env): Removed manual row changed
	call since it has used capplet_util_object_notify_cb.
	* capplet/nwam_vpn_pref_dialog.c
	(capplet_tree_model_row_changed_func), (nwam_compose_tree_view),
	(refresh), (nwam_vpn_selection_changed), (on_nwam_enm_notify_cb):
	Update gui widgets once enm changes.
	* common/nwamui_enm.c (nwamui_enm_set_active): Add notify for active.

2009-07-06  Lin Ma  <Lin.Ma@Sun.COM>
